<resources>
    <string name="app_name">YouShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YouShare</string>
    <string name="nav_header_subtitle">Share and enjoy your videos!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">Log in</string>
    <string name="iniciar_sesion">Log in</string>
    <string name="watch_later">Watch Later</string>
    <string name="search_users">Search Users</string>
    <string name="menu_home">Home</string>
    <string name="search_placeholder">Search videos...</string>
    <string name="search_users_placeholder">Search users...</string>
    <string name="menu_youtube">Search Videos</string>
    <string name="btn_search">Search</string>
    <string name="list">List</string>
    <string name="watched">Watched</string>
    <string name="dropped">Dropped</string>
    <string name="following">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduzca_correo">Enter your email.</string>
    <string name="introduzca_contraseña">Enter your password.</string>
    <string name="datos_no_introducidos">Email or password are empty.</string>
    <string name="crear_cuenta">Create an account</string>
    <string name="contreseña_no_valida">Passwords must be at least 6 characters.</string>
    <string name="inicio_sesion_exitoso">You have successfully logged in.</string>
    <string name="introduzca_nombre">Enter your name.</string>
    <string name="registro_usuario">Sign in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_player">PlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registro_exitoso">User has been created successfully.</string>
    <string name="registro_fallido">The user could not be created.</string>
    <string name="nombre_requerido">The name is a required parameter.</string>
    <string name="guardando_datos">Saving data...</string>
    <string name="guardado_fallido">Error saving user.</string>
    <string name="sincronizacion_fallida">"Error connecting to database. "</string>
    <string name="recuperando_datos">Retrieving data ...</string>
    <string name="recuperacion_fallida">Data could not be retrieved.</string>
    <string name="pedir_mensaje">Enter your message</string>
    <string name="enviar">Send</string>
    <string name="envio_exitoso">Sent.</string>
    <string name="envio_fallido">Error sending.</string>
    <string name="seguir">Follow</string>
    <string name="comentados">Commented videos</string>
    <string name="videos">videos</string>
    <string name="addVerMasTarde">Add to watch later</string>
    <string name="contraseña_incorrecta">Incorrect password</string>
    <string name="usuario_incorrecto">Incorrect user</string>
    <string name="inicio_sesion_fallido">An error occurred while logging in</string>
    <string name="correo_invalido">The email entered is not valid</string>
    <string name="deleteVerMasTarde">Remove from watch later</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cerrar_sesion">Log out</string>
    <string name="error_inicio">Log in error.</string>
    <string name="video_fallido">Video player Failed</string>
    <string name="error_mensajes">Couldn\'t load messages</string>
    <string name="pregunta_cerrar_sesion">Do you want to log out?</string>
    <string name="descripcion_watch_later">Watch Later: This window lists the videos that you want to watch in the future.</string>
    <string name="descripcion_commented">Commented videos: This window lists the videos commented by the user.</string>
    <string name="descripcion_search_videos">Search Videos: In this window, you can search YouTube videos and add them later to your list or watch them and comment.</string>
    <string name="descripcion_following">Followed: This window lists the followed users.</string>
    <string name="descripcion_search_users">Search Users: In this window you can search users and follow them.</string>
    <string name="descripcion_logout">Log out: Logs out from the application.</string>
</resources>