<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectoandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mastarde"
        android:name="com.example.proyectoandroid.ui.mastarde.MasTardeFragment"
        android:label="@string/watch_later"
        tools:layout="@layout/fragment_mas_tarde" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyectoandroid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_seguidos"
        android:name="com.example.proyectoandroid.ui.seguidos.SeguidosFragment"
        android:label="@string/following"
        tools:layout="@layout/fragment_seguidos"/>
    <activity
        android:id="@+id/nav_login"
        android:name="com.example.proyectoandroid.LoginActivity"
        android:label="@string/iniciar_sesion"
        tools:layout="@layout/fragment_seguidos"/>
    <activity
        android:id="@+id/videoSearchActivity"
        android:name="com.example.proyectoandroid.ui.youtube.VideoSearchActivity"
        android:label="activity_video_search"
        tools:layout="@layout/activity_video_search" />

</navigation>