<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="60dp"
            android:paddingBottom="40dp"
            android:text="@string/iniciar_sesion"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="63dp" />

        <EditText
            android:id="@+id/correoDeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/introduzca_correo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordDeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/introduzca_contraseña"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="69dp" />

        <Button
            android:id="@+id/inicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:onClick="iniciarSesion"
            android:paddingBottom="20dp"
            android:text="@string/inicio" />

        <Button
            android:id="@+id/crearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/crear_cuenta" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>