<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SiginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="60dp"
            android:paddingBottom="40dp"
            android:text="@string/registro_usuario"
            android:textSize="40sp" />


        <EditText
            android:id="@+id/nombreDeRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/introduzca_nombre"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/correoDeRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/introduzca_correo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordDeRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="@string/introduzca_contraseña"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="69dp" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:onClick="crearCuenta"
            android:text="@string/registro_usuario" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>