<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:fillViewport="true"
    android:fadeScrollbars="false"
    android:scrollbarThumbVertical="@color/light_blue_A200">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_logo_main"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/itemWatchLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_watch_later_24"
                android:backgroundTint="@color/teal_700" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/descripcion_watch_later" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:id="@+id/itemCommentedVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_video_library_24"
                android:backgroundTint="@color/teal_700" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/descripcion_commented" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:id="@+id/itemSearchVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_youtube_social_white_squircle"
                android:backgroundTint="@color/teal_700"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/descripcion_search_videos" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:id="@+id/itemFollowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_person_add_24"
                android:backgroundTint="@color/teal_700" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/descripcion_following" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:id="@+id/itemSearchUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_person_search_24"
                android:backgroundTint="@color/teal_700"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/descripcion_search_users" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:id="@+id/itemLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_logout_24"
                android:backgroundTint="@color/teal_700"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/descripcion_logout" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>